src/objects/EmailMessage.object
<CustomObject>
    <fields>
        <fullName>Email_Status_First_Open_Date__c</fullName>
        <description>When email was first opened by recipient. Synced via Apex Batch as workaround that EmailStatus object is not directly queryable. Only applicable for EmailMessages linked to ActivityId and the primary WhoId opens the email.</description>
        <inlineHelpText>When email was first opened by recipient.</inlineHelpText>
        <label>Email Status First Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Status_Last_Open_Date__c</fullName>
        <description>When email was last opened by recipient. Synced via Apex Batch as workaround that EmailStatus object is not directly queryable. Only applicable for EmailMessages linked to ActivityId and the primary WhoId opens the email.</description>
        <inlineHelpText>When email was last opened by recipient.</inlineHelpText>
        <label>Email Status Last Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Status_Sent_Date__c</fullName>
        <description>Date when the email was sent. Synced via Apex Batch as workaround that EmailStatus object is not directly queryable. Only applicable for EmailMessages linked to ActivityId and the primary WhoId opens the email.</description>
        <inlineHelpText>Date when email was sent.</inlineHelpText>
        <label>Email Status Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Status_Template_Name__c</fullName>
        <description>Name of the email template used, if any. Synced via Apex Batch as workaround that EmailStatus object is not directly queryable. Only applicable for EmailMessages linked to ActivityId and the primary WhoId opens the email.</description>
        <inlineHelpText>Name of the email template used, if any.</inlineHelpText>
        <label>Email Status Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Status_Times_Opened__c</fullName>
        <description>How many times email was opened by recipient. Synced via Apex Batch as workaround that EmailStatus object is not directly queryable. Only applicable for EmailMessages linked to ActivityId and the primary WhoId opens the email.</description>
        <inlineHelpText>How many times email was opened by recipient.</inlineHelpText>
        <label>Email Status Times Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>